--- a/EasyNewsHub/Styles/TextBlock.xaml
+++ b/EasyNewsHub/Styles/TextBlock.xaml
@@ -3,17 +3,28 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:services="using:EasyNewsHub.Services">
 
+    <Style TargetType="TextBlock" x:Key="BaseTextBlockStyle">
+        <Setter Property="FontFamily" Value="Segoe UI" />
+        <Setter Property="FontWeight" Value="Normal" />
+        <Setter Property="TextTrimming" Value="CharacterEllipsis" />
+        <Setter Property="TextWrapping" Value="Wrap" />
+    </Style>
+
     <!--Common texts-->
-    <Style x:Key="PageTitleStyle" TargetType="TextBlock">
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="FontWeight" Value="SemiLight"/>
+    <Style x:Key="PageTitleStyle" TargetType="TextBlock" BasedOn="{StaticResource BaseTextBlockStyle}">
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="FontWeight" Value="SemiLight" />
         <Setter Property="FontSize" Value="{StaticResource LargeFontSize}"/>
-        <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
-        <Setter Property="TextWrapping" Value="NoWrap"/>
+        <Setter Property="TextWrapping" Value="NoWrap" />
         <Setter Property="Margin" Value="{StaticResource PageTitleMargin}"/>
     </Style>
 
-    <Style x:Key="BodyTextStyle" TargetType="TextBlock">
+    <Style x:Key="SectionHeaderStyle" TargetType="TextBlock" BasedOn="{StaticResource BaseTextBlockStyle}">
+        <Setter Property="FontSize" Value="{StaticResource MediumFontSize}" />
+        <Setter Property="FontWeight" Value="SemiBold" />
+    </Style>
+
+    <Style x:Key="BodyTextStyle" TargetType="TextBlock" BasedOn="{StaticResource BaseTextBlockStyle}">
         <Setter Property="FontWeight" Value="Normal"/>
         <Setter Property="FontSize" Value="{StaticResource MediumFontSize}"/>
         <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
@@ -21,6 +32,7 @@
     </Style>
 
 
+    <!--News List-->
     <Style x:Key="ItemTitleStyle" TargetType="TextBlock" BasedOn="{StaticResource BodyTextStyle}">
     </Style>
 
